feat: update endpoint report and rating by game
